// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IP Pools List Page does not render purchase action if isAdmin is false 1`] = `
<Page
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create IP Pool",
      "to": "/account/ip-pools/create",
    }
  }
  secondaryActions={
    Array [
      Object {
        "Component": [Function],
        "content": "Purchase IPs",
        "to": "/account/billing",
      },
    ]
  }
  title="IP Pools"
>
  <IPWarmupReminderBanner />
  <TableCollection
    columns={
      Array [
        Object {
          "label": "Name",
          "sortKey": "name",
          "width": "40%",
        },
        Object {
          "label": "ID",
          "sortKey": "id",
          "width": "40%",
        },
        Object {
          "label": "Number of IPs Assigned",
          "sortKey": [Function],
          "width": "20%",
        },
      ]
    }
    defaultSortColumn={null}
    defaultSortDirection="asc"
    filterBox={
      Object {
        "exampleModifiers": Array [
          "name",
          "id",
        ],
        "itemToStringKeys": Array [
          "name",
          "id",
        ],
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={
      Array [
        Object {
          "ips": Array [],
          "name": "Default",
        },
      ]
    }
  />
</Page>
`;

exports[`IP Pools List Page does not render purchase action if showPurchaseCTA is false 1`] = `
<Page
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create IP Pool",
      "to": "/account/ip-pools/create",
    }
  }
  secondaryActions={null}
  title="IP Pools"
>
  <IPWarmupReminderBanner />
  <TableCollection
    columns={
      Array [
        Object {
          "label": "Name",
          "sortKey": "name",
          "width": "40%",
        },
        Object {
          "label": "ID",
          "sortKey": "id",
          "width": "40%",
        },
        Object {
          "label": "Number of IPs Assigned",
          "sortKey": [Function],
          "width": "20%",
        },
      ]
    }
    defaultSortColumn={null}
    defaultSortDirection="asc"
    filterBox={
      Object {
        "exampleModifiers": Array [
          "name",
          "id",
        ],
        "itemToStringKeys": Array [
          "name",
          "id",
        ],
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={
      Array [
        Object {
          "ips": Array [],
          "name": "Default",
        },
      ]
    }
  />
</Page>
`;

exports[`IP Pools List Page does not render purchase action if showPurchaseCTA is false2 1`] = `
<Page
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create IP Pool",
      "to": "/account/ip-pools/create",
    }
  }
  secondaryActions={null}
  title="IP Pools"
>
  <IPWarmupReminderBanner />
  <TableCollection
    columns={
      Array [
        Object {
          "label": "Name",
          "sortKey": "name",
          "width": "40%",
        },
        Object {
          "label": "ID",
          "sortKey": "id",
          "width": "40%",
        },
        Object {
          "label": "Number of IPs Assigned",
          "sortKey": [Function],
          "width": "20%",
        },
      ]
    }
    defaultSortColumn={null}
    defaultSortDirection="asc"
    filterBox={
      Object {
        "exampleModifiers": Array [
          "name",
          "id",
        ],
        "itemToStringKeys": Array [
          "name",
          "id",
        ],
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={
      Array [
        Object {
          "ips": Array [],
          "name": "Default",
        },
      ]
    }
  />
</Page>
`;

exports[`IP Pools List Page should render loading component when loading data 1`] = `<Loading />`;

exports[`IP Pools List Page should render row properly 1`] = `
Array [
  <PageLink
    to="/account/ip-pools/edit/my-pool"
  >
    My Pool
  </PageLink>,
  "my-pool",
  "3",
]
`;

exports[`IP Pools List Page should render the IP warm-up banner correctly 1`] = `
<Banner
  marginBottom="500"
  status="warning"
  title="New dedicated IP addresses need to be warmed up"
>
  <Box
    maxWidth="1200"
  >
    <p>
      In order to establish a positive sending reputation, warm up new dedicated IP addresses by gradually sending more emails.
    </p>
    <Banner.Actions>
      <ExternalLink
        as={[Function]}
        to="https://support.sparkpost.com/customer/portal/articles/1972209-ip-warm-up-overview"
      >
        Read our IP Warm-up Overview
      </ExternalLink>
    </Banner.Actions>
  </Box>
</Banner>
`;

exports[`IP Pools List Page should render the list page correctly 1`] = `
<Page
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create IP Pool",
      "to": "/account/ip-pools/create",
    }
  }
  secondaryActions={
    Array [
      Object {
        "Component": [Function],
        "content": "Purchase IPs",
        "to": "/account/billing",
      },
    ]
  }
  title="IP Pools"
>
  <IPWarmupReminderBanner />
  <TableCollection
    columns={
      Array [
        Object {
          "label": "Name",
          "sortKey": "name",
          "width": "40%",
        },
        Object {
          "label": "ID",
          "sortKey": "id",
          "width": "40%",
        },
        Object {
          "label": "Number of IPs Assigned",
          "sortKey": [Function],
          "width": "20%",
        },
      ]
    }
    defaultSortColumn={null}
    defaultSortDirection="asc"
    filterBox={
      Object {
        "exampleModifiers": Array [
          "name",
          "id",
        ],
        "itemToStringKeys": Array [
          "name",
          "id",
        ],
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={
      Array [
        Object {
          "id": 101,
          "ips": Array [
            Object {
              "external_ip": 1111,
            },
            Object {
              "external_ip": 2222,
            },
          ],
          "name": "Test Pool 1",
        },
        Object {
          "id": 102,
          "ips": Array [],
          "name": "Test Pool 2",
        },
      ]
    }
  />
</Page>
`;

exports[`IP Pools List Page should show alert upon error 1`] = `
<Page
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create IP Pool",
      "to": "/account/ip-pools/create",
    }
  }
  secondaryActions={
    Array [
      Object {
        "Component": [Function],
        "content": "Purchase IPs",
        "to": "/account/billing",
      },
    ]
  }
  title="IP Pools"
>
  <IPWarmupReminderBanner />
  <ApiErrorBanner
    errorDetails="Uh oh! It broke."
    message="Sorry, we seem to have had some trouble loading your ip pools."
    reload={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": undefined,
      }
    }
  />
</Page>
`;
